# RedMatrix

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
scripts/: 01_enumerate.py  02_claim_test.py  03_read_state.py  README.md
specs/: 00-README.md  01-ARCHITECTURE.md  02-PROTOCOL.md  03-DEVICE.md  04-UX.md  05-BACKLOG.md  06-OPEN-QUESTIONS.md  07-WEBSOCKET-API.md  08-CLIENT-DEVELOPER-GUIDE.md  2026-04-06-command-serialization-design.md  2026-04-06-device-configs-design.md  2026-04-06-mixer-volume-encoding-design.md  2026-04-06-phase0-usb-validation-design.md  2026-04-07-usb-transport-design.md  2026-04-07-websocket-server-design.md
src/: App.test.tsx  App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/protocol/: commands.rs  constants.rs  mixer.rs  mod.rs  notifications.rs  transport.rs
src-tauri/src/protocol/devices/: clarett.rs  gen2.rs  gen3.rs  mod.rs  scarlett_18i20_gen3.rs
src-tauri/src/server/: broadcast.rs  crypto.rs  listener.rs  mdns.rs  messages.rs  mock_devices.rs  mock_handler.rs  mod.rs  session.rs  state.rs
src-tauri/src/state/: mod.rs
src-tauri/src/tauri_commands/: mod.rs
src/components/: About.tsx  DeviceSelector.tsx  Footer.tsx  GainCell.tsx  Header.tsx  MeterBar.tsx  PairingModal.tsx  QrCode.tsx  SubTabBar.tsx  TabBar.tsx  Toast.tsx  index.ts
src/hooks/: index.ts  useConfig.ts  useDevice.tsx  useLabels.ts  useMeterStore.ts  (+1 more)
(+28 files in other folders)
