[package]
name = "redmatrix"
version = "0.1.0"
description = "Open-source Focusrite Scarlett controller"
authors = ["Knives on Strings"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
rusb = "0.9"
tokio-tungstenite = "0.26"
p256 = { version = "0.13", features = ["ecdh"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
mdns-sd = "0.12"
futures-util = "0.3"
dirs = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
